change tab title

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
       src="https://kit.fontawesome.com/6240c6853b.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Tweet Insights</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
